  [Michele Simionato]
  * Removed some misleading warnings for calculations with a site model
  * Added a check for missing `risk_investigation_time` in ebrisk
  * Reduced drastically (I measured improvements over 40x) memory occupation,
    data transfer and data storage for multi-sites disaggregation
  * Sites for which the disaggregation PoE cannot be reached are discarded
    and a warning is printed, rather than killing the whole computation
  * `oq show performance` can be called in the middle of a computation again
  * Filtered out the far away distances and reduced the time spent in
    saving the performance info by orders of magnitude in large disaggregations
  * Reduced the data transfer by reading the data directly from the
    datastore in disaggregation calculations
  * Reduced the memory consumption sending disaggregation tasks incrementally
  * Added an extract API disagg_layer
  * Moved `max_sites_disagg` from openquake.cfg into the job.ini
  * Fixed a bug with the --config option: serialize_jobs could not be overridden
  * Implemented insured losses

python3-oq-engine (3.6.0-1~xenial01) xenial; urgency=low

  [Michele Simionato]
  * In some cases `applyToSources` was giving a fake error about the source
    not being in the source model even if it actually was

  [Chris Van Houtte]
  * Adds the Van Houtte et al. (2018) significant duration model for New
    Zealand

  [Michele Simionato]
  * Added a way to compute and plot the MFD coming from an event based
  * Storing the MFDs in TOML format inside the datastore

  [Robin Gee]
  * Moves b4 constant into COEFFS table for GMPE Sharma et al., 2009

  [Graeme Weatherill]
  * Adds functionality to Cauzzi et al. (2014) and Derras et al. (2014)
    calibrated GMPEs for Germany to use either finite or point source distances

  [Michele Simionato]
  * Restored the ability to associate site model parameters to a grid of sites
  * Made it possible to set `hazard_curves_from_gmfs=true` with